test: complete ZoneDetectionJobServiceIT